# res://Scripts/MainMenu.gd
extends Control

@onready var btn_new_game = $VBoxContainer/Btn_NewGame
@onready var btn_continue = $VBoxContainer/Btn_Continue
@onready var btn_load = $VBoxContainer/Btn_Load
@onready var btn_settings = $VBoxContainer/Btn_Settings
@onready var btn_exit = $VBoxContainer/Btn_Exit
@onready var title_label = $Title

func _ready():
	# –ü–æ–¥–∫–ª—é—á–∞–µ–º —Å–∏–≥–Ω–∞–ª—ã –∫–Ω–æ–ø–æ–∫
	btn_new_game.connect("pressed", Callable(self, "_on_new_game_pressed"))
	btn_continue.connect("pressed", Callable(self, "_on_continue_pressed"))
	btn_load.connect("pressed", Callable(self, "_on_load_pressed"))
	btn_settings.connect("pressed", Callable(self, "_on_settings_pressed"))
	btn_exit.connect("pressed", Callable(self, "_on_exit_pressed"))
	
	# –ü–æ–¥–∫–ª—é—á–∞–µ–º —Å–∏–≥–Ω–∞–ª –∑–∞–∫—Ä—ã—Ç–∏—è –æ–∫–Ω–∞ –¥–ª—è —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è
	get_tree().get_root().connect("close_requested", Callable(self, "_on_window_close_requested"))
	
	# –ü–æ–¥–∫–ª—é—á–∞–µ–º –∫–Ω–æ–ø–∫—É "–í–µ—Ä–Ω—É—Ç—å—Å—è –≤ –±–æ–π" –µ—Å–ª–∏ –æ–Ω–∞ –µ—Å—Ç—å
	var btn_return = get_node_or_null("Btn_ReturnToBattle")
	if btn_return:
		btn_return.connect("pressed", Callable(self, "_on_return_to_battle_pressed"))
	
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º –Ω–∞–ª–∏—á–∏–µ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è –¥–ª—è –∫–Ω–æ–ø–∫–∏ "–ü—Ä–æ–¥–æ–ª–∂–∏—Ç—å"
	_check_save_exists()
	
	# –ó–∞–ø—É—Å–∫–∞–µ–º –∞–Ω–∏–º–∞—Ü–∏—é –∑–∞–≥–æ–ª–æ–≤–∫–∞
	_start_title_animation()
	
	# –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ–º —Ñ–æ–Ω–æ–≤—É—é –º—É–∑—ã–∫—É
	_initialize_background_music()
	
	# –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º —Ñ–æ–Ω–æ–≤–æ–µ –∏–∑–æ–±—Ä–∞–∂–µ–Ω–∏–µ
	_setup_background_image()
	
	# –ü–æ–∫–∞–∑—ã–≤–∞–µ–º –¥–∏—Å–∫–ª–µ–π–º–µ—Ä –æ —Ä–∞–∑—Ä–∞–±–æ—Ç–∫–µ –∏–≥—Ä—ã
	await get_tree().create_timer(0.5).timeout  # –ù–µ–±–æ–ª—å—à–∞—è –∑–∞–¥–µ—Ä–∂–∫–∞ –ø–æ—Å–ª–µ –∑–∞–≥—Ä—É–∑–∫–∏
	_show_development_disclaimer()

func _check_save_exists():
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º –Ω–∞–ª–∏—á–∏–µ —Ñ–∞–π–ª–∞ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è
	var player_manager = get_node_or_null("/root/PlayerManager")
	if player_manager and player_manager.has_save_file():
		btn_continue.disabled = false
	else:
		btn_continue.disabled = true

func _on_new_game_pressed():
	# –í–æ—Å–ø—Ä–æ–∏–∑–≤–æ–¥–∏–º –∑–≤—É–∫ –Ω–∞–∂–∞—Ç–∏—è –∫–Ω–æ–ø–∫–∏
	if SoundManager:
		SoundManager.play_sound("page", -5.0)
	
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º, –µ—Å—Ç—å –ª–∏ –ø—Ä–æ–≥—Ä–µ—Å—Å –∏–∑—É—á–µ–Ω–∏—è —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π
	var ability_learning_system = get_node_or_null("/root/AbilityLearningSystem")
	var has_learning_progress = false
	
	if ability_learning_system:
		has_learning_progress = ability_learning_system.has_any_progress()
	
	# –ï—Å–ª–∏ –µ—Å—Ç—å –ø—Ä–æ–≥—Ä–µ—Å—Å –∏–∑—É—á–µ–Ω–∏—è, –ø–æ–∫–∞–∑—ã–≤–∞–µ–º –ø—Ä–µ–¥—É–ø—Ä–µ–∂–¥–µ–Ω–∏–µ
	if has_learning_progress:
		_show_new_game_warning()
	else:
		_start_new_game()

func _show_new_game_warning():
	"""–ü–æ–∫–∞–∑—ã–≤–∞–µ—Ç –ø—Ä–µ–¥—É–ø—Ä–µ–∂–¥–µ–Ω–∏–µ –æ –ø–æ—Ç–µ—Ä–µ –ø—Ä–æ–≥—Ä–µ—Å—Å–∞ –∏–∑—É—á–µ–Ω–∏—è —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π"""
	var dialog = ConfirmationDialog.new()
	dialog.title = "–ù–æ–≤–∞—è –∏–≥—Ä–∞"
	dialog.dialog_text = "‚ö†Ô∏è –í–ù–ò–ú–ê–ù–ò–ï!\n\n–ü—Ä–∏ —Å–æ–∑–¥–∞–Ω–∏–∏ –Ω–æ–≤–æ–π –∏–≥—Ä—ã –≤–µ—Å—å –ø—Ä–æ–≥—Ä–µ—Å—Å –∏–∑—É—á–µ–Ω–∏—è —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π –≤—Ä–∞–≥–æ–≤ –±—É–¥–µ—Ç –ø–æ—Ç–µ—Ä—è–Ω.\n\n–í—ã —É–≤–µ—Ä–µ–Ω—ã, —á—Ç–æ —Ö–æ—Ç–∏—Ç–µ –ø—Ä–æ–¥–æ–ª–∂–∏—Ç—å?"
	dialog.get_ok_button().text = "–î–∞, –ø—Ä–æ–¥–æ–ª–∂–∏—Ç—å"
	dialog.get_cancel_button().text = "–û—Ç–º–µ–Ω–∞"
	
	add_child(dialog)
	dialog.popup_centered()
	
	# –ü–æ–¥–∫–ª—é—á–∞–µ–º —Å–∏–≥–Ω–∞–ª—ã
	dialog.confirmed.connect(_on_new_game_confirmed)
	dialog.canceled.connect(_on_new_game_canceled.bind(dialog))

func _on_new_game_confirmed():
	"""–ü–æ–¥—Ç–≤–µ—Ä–∂–¥–µ–Ω–∏–µ —Å–æ–∑–¥–∞–Ω–∏—è –Ω–æ–≤–æ–π –∏–≥—Ä—ã"""
	# –í–æ—Å–ø—Ä–æ–∏–∑–≤–æ–¥–∏–º –∑–≤—É–∫ –ø–æ–¥—Ç–≤–µ—Ä–∂–¥–µ–Ω–∏—è
	if SoundManager:
		SoundManager.play_sound("page", -5.0)
	
	_start_new_game()

func _on_new_game_canceled(dialog: ConfirmationDialog):
	"""–û—Ç–º–µ–Ω–∞ —Å–æ–∑–¥–∞–Ω–∏—è –Ω–æ–≤–æ–π –∏–≥—Ä—ã"""
	dialog.queue_free()

func _start_new_game():
	"""–ù–∞—á–∏–Ω–∞–µ—Ç –Ω–æ–≤—É—é –∏–≥—Ä—É"""
	
	# –£–¥–∞–ª—è–µ–º —Å—Ç–∞—Ä–æ–µ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏–µ –ø—Ä–∏ –Ω–∞—á–∞–ª–µ –Ω–æ–≤–æ–π –∏–≥—Ä—ã
	var player_manager = get_node_or_null("/root/PlayerManager")
	if player_manager:
		print("MainMenu: –ù–∞—á–∞–ª–æ –Ω–æ–≤–æ–π –∏–≥—Ä—ã - —É–¥–∞–ª–µ–Ω–∏–µ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è –∏ —Å–±—Ä–æ—Å –¥–∞–Ω–Ω—ã—Ö")
		player_manager.delete_save_file()
		# –°–±—Ä–∞—Å—ã–≤–∞–µ–º –¥–∞–Ω–Ω—ã–µ –∏–≥—Ä–æ–∫–∞ –∫ –Ω–∞—á–∞–ª—å–Ω—ã–º
		player_manager.initialize_player()
		
		# –ü—Ä–æ–≤–µ—Ä—è–µ–º —á—Ç–æ –¥–∞–Ω–Ω—ã–µ —Å–±—Ä–æ—à–µ–Ω—ã –ø—Ä–∞–≤–∏–ª—å–Ω–æ
		var player_data = player_manager.get_player_data()
		if player_data:
			print("MainMenu: –ü–æ—Å–ª–µ —Å–±—Ä–æ—Å–∞ - Base STR=", player_data.base_strength, " Final STR=", player_data.strength)
	
	# –°–±—Ä–∞—Å—ã–≤–∞–µ–º –ø—Ä–æ–≥—Ä–µ—Å—Å –∏–∑—É—á–µ–Ω–∏—è —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π
	var ability_learning_system = get_node_or_null("/root/AbilityLearningSystem")
	if ability_learning_system:
		ability_learning_system.reset_learning_progress()
	
	# –°–±—Ä–∞—Å—ã–≤–∞–µ–º –ø—Ä–æ–≥—Ä–µ—Å—Å –ª–æ–∫–∞—Ü–∏–π (–±–ª–æ–∫–∏—Ä—É–µ–º –≤—Å–µ –∫—Ä–æ–º–µ –ø–µ—Ä–≤–æ–π)
	var location_manager = get_node_or_null("/root/LocationManager")
	if location_manager:
		# –ë–ª–æ–∫–∏—Ä—É–µ–º –≤—Å–µ –ª–æ–∫–∞—Ü–∏–∏ –∫—Ä–æ–º–µ –ø–µ—Ä–≤–æ–π
		for location in location_manager.locations.values():
			location.is_unlocked = false
		# –†–∞–∑–±–ª–æ–∫–∏—Ä—É–µ–º —Ç–æ–ª—å–∫–æ –ø–µ—Ä–≤—É—é –ª–æ–∫–∞—Ü–∏—é
		if "dungeon" in location_manager.locations:
			location_manager.locations["dungeon"].is_unlocked = true
		location_manager.current_location = location_manager.locations.get("dungeon")
	
	# –°–±—Ä–∞—Å—ã–≤–∞–µ–º –≤—Å–µ –≤–∞–ª—é—Ç—ã –∫ –Ω–∞—á–∞–ª—å–Ω—ã–º –∑–Ω–∞—á–µ–Ω–∏—è–º
	var soul_shard_manager = get_node_or_null("/root/SoulShard")
	if soul_shard_manager:
		soul_shard_manager.reset_soul_shards()
		print("MainMenu: –û—Å–∫–æ–ª–∫–∏ –¥—É—à —Å–±—Ä–æ—à–µ–Ω—ã")
	
	var strong_souls_manager = get_node_or_null("/root/StrongSouls")
	if strong_souls_manager:
		strong_souls_manager.reset_data()
	
	var great_souls_manager = get_node_or_null("/root/GreatSouls")
	if great_souls_manager:
		great_souls_manager.reset_data()
	
	var divine_souls_manager = get_node_or_null("/root/DivineSouls")
	if divine_souls_manager:
		divine_souls_manager.reset_data()
	
	# –ü–µ—Ä–µ—Ö–æ–¥–∏–º –∫ —ç–∫—Ä–∞–Ω—É –ø–æ–¥–≥–æ—Ç–æ–≤–∫–∏ –ø–µ—Ä—Å–æ–Ω–∞–∂–∞
	SceneTransition.change_scene("res://Scenes/UI/CharacterPreparation.tscn")

func _on_continue_pressed():
	# –í–æ—Å–ø—Ä–æ–∏–∑–≤–æ–¥–∏–º –∑–≤—É–∫ –Ω–∞–∂–∞—Ç–∏—è –∫–Ω–æ–ø–∫–∏
	if SoundManager:
		SoundManager.play_sound("page", -5.0)
	
	# –ó–∞–≥—Ä—É–∂–∞–µ–º —Å–æ—Ö—Ä–∞–Ω–µ–Ω–Ω—ã–µ –¥–∞–Ω–Ω—ã–µ
	var player_manager = get_node_or_null("/root/PlayerManager")
	if player_manager:
		player_manager.load_game_data()
	
	# –û—Å–∫–æ–ª–∫–∏ –¥—É—à –∑–∞ –∑–∞–±–µ–≥ —É–∂–µ –ø–µ—Ä–µ–Ω–µ—Å–µ–Ω—ã –≤ —Ö—Ä–∞–Ω–∏–ª–∏—â–µ –ø—Ä–∏ –∑–∞–≤–µ—Ä—à–µ–Ω–∏–∏ —É—Ä–æ–≤–Ω—è
	# (–≤ RoomSelector.gd –ø—Ä–∏ –≤—ã–∑–æ–≤–µ _return_to_location_selector())
	
	# –ü–µ—Ä–µ—Ö–æ–¥–∏–º –∫ —ç–∫—Ä–∞–Ω—É –ø–æ–¥–≥–æ—Ç–æ–≤–∫–∏ –ø–µ—Ä—Å–æ–Ω–∞–∂–∞ —Å –ø–ª–∞–≤–Ω—ã–º –ø–µ—Ä–µ—Ö–æ–¥–æ–º
	SceneTransition.change_scene("res://Scenes/UI/CharacterPreparation.tscn")

func _on_load_pressed():
	# –í–æ—Å–ø—Ä–æ–∏–∑–≤–æ–¥–∏–º –∑–≤—É–∫ –Ω–∞–∂–∞—Ç–∏—è –∫–Ω–æ–ø–∫–∏
	if SoundManager:
		SoundManager.play_sound("page", -5.0)
	
	# –í –±—É–¥—É—â–µ–º –∑–¥–µ—Å—å –±—É–¥–µ—Ç —ç–∫—Ä–∞–Ω –∑–∞–≥—Ä—É–∑–∫–∏ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏–π
	_show_load_dialog()

func _on_settings_pressed():
	"""–û—Ç–∫—Ä—ã–≤–∞–µ—Ç —ç–∫—Ä–∞–Ω –Ω–∞—Å—Ç—Ä–æ–µ–∫"""
	# –í–æ—Å–ø—Ä–æ–∏–∑–≤–æ–¥–∏–º –∑–≤—É–∫ –Ω–∞–∂–∞—Ç–∏—è –∫–Ω–æ–ø–∫–∏
	if SoundManager:
		SoundManager.play_sound("page", -5.0)
	
	var settings_scene = preload("res://Scenes/UI/SettingsScreen.tscn")
	var settings_instance = settings_scene.instantiate()
	
	# –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –ø—Ä–µ–¥—ã–¥—É—â—É—é —Å—Ü–µ–Ω—É
	settings_instance.set_previous_scene("res://Scenes/MainMenu.tscn")
	
	# –î–æ–±–∞–≤–ª—è–µ–º –∫ —Ç–µ–∫—É—â–µ–π —Å—Ü–µ–Ω–µ
	add_child(settings_instance)

func _on_exit_pressed():
	# –í–æ—Å–ø—Ä–æ–∏–∑–≤–æ–¥–∏–º –∑–≤—É–∫ –Ω–∞–∂–∞—Ç–∏—è –∫–Ω–æ–ø–∫–∏
	if SoundManager:
		SoundManager.play_sound("page", -5.0)
	
	# –°–æ—Ö—Ä–∞–Ω—è–µ–º –∏–≥—Ä—É –ø–µ—Ä–µ–¥ –≤—ã—Ö–æ–¥–æ–º
	var player_manager = get_node_or_null("/root/PlayerManager")
	if player_manager:
		player_manager.save_game_data()
	
	get_tree().quit()

# === –ò–ù–¢–†–û ===

func _on_watch_intro_pressed():
	"""–ü–æ–∫–∞–∑—ã–≤–∞–µ—Ç –∏–Ω—Ç—Ä–æ (–¥–ª—è –∫–Ω–æ–ø–∫–∏ –≤ –Ω–∞—Å—Ç—Ä–æ–π–∫–∞—Ö –∏–ª–∏ –º–µ–Ω—é)"""
	if SoundManager:
		SoundManager.play_sound("page", -5.0)
	SceneTransition.change_scene("res://Scenes/UI/IntroScene.tscn")

func _on_window_close_requested():
	# –°–æ—Ö—Ä–∞–Ω—è–µ–º –∏–≥—Ä—É –ø—Ä–∏ –∑–∞–∫—Ä—ã—Ç–∏–∏ –æ–∫–Ω–∞
	var player_manager = get_node_or_null("/root/PlayerManager")
	if player_manager:
		player_manager.save_game_data()
		print("–ò–≥—Ä–∞ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∞ –ø—Ä–∏ –∑–∞–∫—Ä—ã—Ç–∏–∏ –æ–∫–Ω–∞")
	
	get_tree().quit()

func _show_load_dialog():
	# –í—Ä–µ–º–µ–Ω–Ω–∞—è –∑–∞–≥–ª—É—à–∫–∞ –¥–ª—è –¥–∏–∞–ª–æ–≥–∞ –∑–∞–≥—Ä—É–∑–∫–∏
	var dialog = AcceptDialog.new()
	dialog.title = "–ó–∞–≥—Ä—É–∑–∫–∞"
	dialog.dialog_text = "–§—É–Ω–∫—Ü–∏—è –∑–∞–≥—Ä—É–∑–∫–∏ –±—É–¥–µ—Ç –¥–æ–±–∞–≤–ª–µ–Ω–∞ –≤ –±—É–¥—É—â–∏—Ö –≤–µ—Ä—Å–∏—è—Ö"
	add_child(dialog)
	dialog.popup_centered()
	dialog.connect("confirmed", Callable(dialog, "queue_free"))

func _show_settings_dialog():
	# –í—Ä–µ–º–µ–Ω–Ω–∞—è –∑–∞–≥–ª—É—à–∫–∞ –¥–ª—è –¥–∏–∞–ª–æ–≥–∞ –Ω–∞—Å—Ç—Ä–æ–µ–∫
	var dialog = AcceptDialog.new()
	dialog.title = "–ù–∞—Å—Ç—Ä–æ–π–∫–∏"
	dialog.dialog_text = "–§—É–Ω–∫—Ü–∏—è –Ω–∞—Å—Ç—Ä–æ–µ–∫ –±—É–¥–µ—Ç –¥–æ–±–∞–≤–ª–µ–Ω–∞ –≤ –±—É–¥—É—â–∏—Ö –≤–µ—Ä—Å–∏—è—Ö"
	add_child(dialog)
	dialog.popup_centered()
	dialog.connect("confirmed", Callable(dialog, "queue_free"))

func _start_title_animation():
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º, —á—Ç–æ –∑–∞–≥–æ–ª–æ–≤–æ–∫ –Ω–∞–π–¥–µ–Ω
	if not title_label:
		return
	
	# –°–æ–∑–¥–∞–µ–º –∞–Ω–∏–º–∞—Ü–∏—é –ø—É–ª—å—Å–∞—Ü–∏–∏ –¥–ª—è –∑–∞–≥–æ–ª–æ–≤–∫–∞
	var tween = create_tween()
	tween.set_loops()
	tween.tween_property(title_label, "modulate", Color(0.3, 1.0, 1.0, 1.0), 3.0)  # –Ø—Ä–∫–∞—è –≤–∞—Ä–∏–∞—Ü–∏—è #37feee
	tween.tween_property(title_label, "modulate", Color(0.1, 0.6, 0.7, 0.8), 3.0)  # –¢—É—Å–∫–ª–∞—è –≤–∞—Ä–∏–∞—Ü–∏—è #37feee

func _initialize_background_music():
	"""–ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ—Ç —Ñ–æ–Ω–æ–≤—É—é –º—É–∑—ã–∫—É –¥–ª—è –≥–ª–∞–≤–Ω–æ–≥–æ –º–µ–Ω—é"""
	var music_player = get_node_or_null("/root/MusicPlayer")
	if music_player:
		# –ó–∞–≥—Ä—É–∂–∞–µ–º –º—É–∑—ã–∫–∞–ª—å–Ω—ã–π —Ñ–∞–π–ª
		var main_menu_music = preload("res://Audio/Music/Background/Action 5 Loop.ogg")
		if main_menu_music:
			music_player.play_music(main_menu_music, true, true, 4.0, -15.0)  # fade_in=true, crossfade=true, 4 —Å–µ–∫—É–Ω–¥—ã, –Ω–∞—á–∞–ª—å–Ω–∞—è –≥—Ä–æ–º–∫–æ—Å—Ç—å -15dB

func _setup_background_image():
	"""–£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ—Ç —Ñ–æ–Ω–æ–≤–æ–µ –∏–∑–æ–±—Ä–∞–∂–µ–Ω–∏–µ –¥–ª—è –≥–ª–∞–≤–Ω–æ–≥–æ –º–µ–Ω—é"""
	var background_node = get_node("Background")
	if background_node:
		# –ó–∞–≥—Ä—É–∂–∞–µ–º –∏–∑–æ–±—Ä–∞–∂–µ–Ω–∏–µ
		var background_texture = load("res://Assets/Mainmenu.png")
		if background_texture:
			# –ü—Ä–µ–æ–±—Ä–∞–∑—É–µ–º ColorRect –≤ TextureRect
			var texture_rect = TextureRect.new()
			texture_rect.name = "BackgroundTexture"
			texture_rect.anchors_preset = Control.PRESET_FULL_RECT
			texture_rect.anchor_right = 1.0
			texture_rect.anchor_bottom = 1.0
			texture_rect.texture = background_texture
			texture_rect.stretch_mode = TextureRect.STRETCH_KEEP_ASPECT_COVERED
			
			# –î–æ–±–∞–≤–ª—è–µ–º –ø–æ–ª—É–ø—Ä–æ–∑—Ä–∞—á–Ω—ã–π —Å–ª–æ–π
			var overlay = ColorRect.new()
			overlay.name = "Overlay"
			overlay.anchors_preset = Control.PRESET_FULL_RECT
			overlay.anchor_right = 1.0
			overlay.anchor_bottom = 1.0
			overlay.color = Color(0, 0, 0, 0.3)
			
			# –ó–∞–º–µ–Ω—è–µ–º —Å—Ç–∞—Ä—ã–π —Ñ–æ–Ω
			background_node.queue_free()
			add_child(texture_rect)
			add_child(overlay)
			move_child(overlay, 0)  # –ü–µ—Ä–µ–º–µ—â–∞–µ–º overlay –ø–æ–¥ VBoxContainer
			move_child(texture_rect, 0)  # –ü–µ—Ä–µ–º–µ—â–∞–µ–º texture_rect –ø–æ–¥ overlay

func _on_return_to_battle_pressed():
	# –í–æ—Å–ø—Ä–æ–∏–∑–≤–æ–¥–∏–º –∑–≤—É–∫ –Ω–∞–∂–∞—Ç–∏—è –∫–Ω–æ–ø–∫–∏
	if SoundManager:
		SoundManager.play_sound("page", -5.0)
	
	print("–í–æ–∑–≤—Ä–∞—â–∞–µ–º—Å—è –≤ –±–æ–π...")
	# –£–¥–∞–ª—è–µ–º –≥–ª–∞–≤–Ω–æ–µ –º–µ–Ω—é (—ç—Ç–æ—Ç —É–∑–µ–ª)
	queue_free()

func _show_development_disclaimer():
	"""–ü–æ–∫–∞–∑—ã–≤–∞–µ—Ç –¥–∏—Å–∫–ª–µ–π–º–µ—Ä –æ —Ä–∞–∑—Ä–∞–±–æ—Ç–∫–µ –∏–≥—Ä—ã –ø—Ä–∏ –∑–∞–ø—É—Å–∫–µ"""
	# –°–æ–∑–¥–∞–µ–º –æ–∫–Ω–æ
	var window = Window.new()
	window.title = "Soul Collector - Early Access"
	window.size = Vector2i(700, 600)  # –£–≤–µ–ª–∏—á–µ–Ω–æ —Å 550 –¥–æ 600
	window.popup_window = true
	window.transient = true
	window.exclusive = true
	window.unresizable = true
	
	# –ü–æ–¥–∫–ª—é—á–∞–µ–º —Å–∏–≥–Ω–∞–ª –∑–∞–∫—Ä—ã—Ç–∏—è –æ–∫–Ω–∞ –ø–æ –∫—Ä–µ—Å—Ç–∏–∫—É
	window.close_requested.connect(func():
		if SoundManager:
			SoundManager.play_sound("page", -5.0)
		window.queue_free()
	)
	
	# –°–æ–∑–¥–∞–µ–º –ø–∞–Ω–µ–ª—å —Å —Ç–µ–º–Ω—ã–º —Ñ–æ–Ω–æ–º
	var panel = Panel.new()
	panel.set_anchors_preset(Control.PRESET_FULL_RECT)
	
	# –°—Ç–∏–ª–∏–∑—É–µ–º –ø–∞–Ω–µ–ª—å
	var panel_style = StyleBoxFlat.new()
	panel_style.bg_color = Color(0.1, 0.1, 0.15, 0.98)
	panel_style.border_width_left = 3
	panel_style.border_width_right = 3
	panel_style.border_width_top = 3
	panel_style.border_width_bottom = 3
	panel_style.border_color = Color(0.8, 0.4, 0.0, 1.0)  # –û—Ä–∞–Ω–∂–µ–≤–∞—è —Ä–∞–º–∫–∞
	panel_style.corner_radius_top_left = 8
	panel_style.corner_radius_top_right = 8
	panel_style.corner_radius_bottom_left = 8
	panel_style.corner_radius_bottom_right = 8
	panel_style.shadow_size = 10
	panel_style.shadow_color = Color(0, 0, 0, 0.5)
	panel.add_theme_stylebox_override("panel", panel_style)
	
	# –°–æ–∑–¥–∞–µ–º –∫–æ–Ω—Ç–µ–π–Ω–µ—Ä –¥–ª—è —Å–æ–¥–µ—Ä–∂–∏–º–æ–≥–æ
	var vbox = VBoxContainer.new()
	vbox.set_anchors_preset(Control.PRESET_FULL_RECT)
	vbox.add_theme_constant_override("separation", 15)
	vbox.offset_left = 30
	vbox.offset_right = -30
	vbox.offset_top = 30
	vbox.offset_bottom = -30
	
	# –ó–∞–≥–æ–ª–æ–≤–æ–∫
	var title = RichTextLabel.new()
	title.bbcode_enabled = true
	title.fit_content = true
	title.scroll_active = false
	title.custom_minimum_size = Vector2(0, 50)  # –£–º–µ–Ω—å—à–µ–Ω–æ —Å 60 –¥–æ 50
	title.text = "[center][color=#FF8800][b]‚ö†Ô∏è –ò–ì–†–ê –í –†–ê–ó–†–ê–ë–û–¢–ö–ï ‚ö†Ô∏è[/b][/color][/center]"
	title.add_theme_font_size_override("bold_font_size", 26)  # –£–º–µ–Ω—å—à–µ–Ω–æ —Å 28 –¥–æ 26
	vbox.add_child(title)
	
	# –°–æ–∑–¥–∞–µ–º ScrollContainer –¥–ª—è –ø—Ä–æ–∫—Ä—É—Ç–∫–∏ —Ç–µ–∫—Å—Ç–∞
	var scroll_container = ScrollContainer.new()
	scroll_container.custom_minimum_size = Vector2(0, 400)
	scroll_container.size_flags_vertical = Control.SIZE_EXPAND_FILL
	
	# –û—Å–Ω–æ–≤–Ω–æ–π —Ç–µ–∫—Å—Ç
	var content = RichTextLabel.new()
	content.bbcode_enabled = true
	content.fit_content = true  # –†–∞–∑—Ä–µ—à–∞–µ–º —Ç–µ–∫—Å—Ç—É –∑–∞–Ω–∏–º–∞—Ç—å –Ω—É–∂–Ω—É—é –≤—ã—Å–æ—Ç—É
	content.scroll_active = false  # –û—Ç–∫–ª—é—á–∞–µ–º –≤—Å—Ç—Ä–æ–µ–Ω–Ω—É—é –ø—Ä–æ–∫—Ä—É—Ç–∫—É (–∏—Å–ø–æ–ª—å–∑—É–µ–º ScrollContainer)
	content.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	
	var disclaimer_text = """[center][color=#FFAA44][b]–í–Ω–∏–º–∞–Ω–∏–µ![/b][/color][/center]

–≠—Ç–∞ –∏–≥—Ä–∞ –Ω–∞—Ö–æ–¥–∏—Ç—Å—è –Ω–∞ —Ä–∞–Ω–Ω–µ–π —Å—Ç–∞–¥–∏–∏ —Ä–∞–∑—Ä–∞–±–æ—Ç–∫–∏ (Early Access). –í –ø—Ä–æ—Ü–µ—Å—Å–µ –∏–≥—Ä—ã –º–æ–≥—É—Ç –≤–æ–∑–Ω–∏–∫–∞—Ç—å –æ—à–∏–±–∫–∏ –∏ –±–∞–≥–∏.

[color=#44FF88][b]‚úì –î–æ—Å—Ç—É–ø–Ω–æ –≤ –∏–≥—Ä–µ:[/b][/color]

‚Ä¢ [color=#88DDFF][b]5 –ª–æ–∫–∞—Ü–∏–π[/b][/color] –¥–ª—è –ø—Ä–æ—Ö–æ–∂–¥–µ–Ω–∏—è
‚Ä¢ [color=#88DDFF][b]22 —Ç–∏–ø–∞ –≤—Ä–∞–≥–æ–≤[/b][/color] (–æ–±—ã—á–Ω—ã–µ + —ç–ª–∏—Ç–Ω—ã–µ + –±–æ—Å—Å—ã)
‚Ä¢ [color=#88DDFF][b]130+ –ø–∞—Å—Å–∏–≤–Ω—ã—Ö —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π[/b][/color] –¥–ª—è –∏–∑—É—á–µ–Ω–∏—è
‚Ä¢ –°–∏—Å—Ç–µ–º–∞ –º–µ—Ç–∞-–ø—Ä–æ–≥—Ä–µ—Å—Å–∏–∏ (–∏–∑—É—á–µ–Ω–∏–µ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π)
‚Ä¢ –†–∞–∑–≤–∏—Ç–∏–µ –ø–µ—Ä—Å–æ–Ω–∞–∂–∞ –∏ —Ä–∞—Å–ø—Ä–µ–¥–µ–ª–µ–Ω–∏–µ —Ö–∞—Ä–∞–∫—Ç–µ—Ä–∏—Å—Ç–∏–∫
‚Ä¢ –ö–≤–µ—Å—Ç–æ–≤–∞—è –ª–∏–Ω–∏—è —Å –ê—Ä—Ö–∏—Ç–µ–∫—Ç–æ—Ä–æ–º –¥—É—à

[color=#FFDD44][b]üìã –í –±—É–¥—É—â–∏—Ö –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è—Ö:[/b][/color]

‚Ä¢ –ò–∑—É—á–µ–Ω–∏–µ [b]–∞–∫—Ç–∏–≤–Ω—ã—Ö —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π[/b] –≤—Ä–∞–≥–æ–≤
‚Ä¢ –î–æ–ø–æ–ª–Ω–∏—Ç–µ–ª—å–Ω—ã–µ –ª–æ–∫–∞—Ü–∏–∏ ([color=#FF6666]4 –Ω–æ–≤—ã–µ –∑–æ–Ω—ã[/color])
‚Ä¢ [color=#FF4444][b]–£–±–µ—Ä-–±–æ—Å—Å—ã[/b][/color] –¥–ª—è —ç–∫—Å—Ç—Ä–µ–º–∞–ª—å–Ω–æ–≥–æ –≤—ã–∑–æ–≤–∞
‚Ä¢ –£–Ω–∏–∫–∞–ª—å–Ω—ã–µ [color=#AA44FF]–º–∏—Ñ–∏—á–µ—Å–∫–∏–µ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–∏[/color]
‚Ä¢ –ù–æ–≤—ã–µ –∫–≤–µ—Å—Ç—ã –∏ —Å—é–∂–µ—Ç–Ω—ã–µ –ª–∏–Ω–∏–∏
‚Ä¢ –°–∏—Å—Ç–µ–º–∞ –∫—Ä–∞—Ñ—Ç–∞ –∏ —É–ª—É—á—à–µ–Ω–∏–π

[center][color=#44FF44][b]–°–ø–∞—Å–∏–±–æ –∑–∞ —Ç–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ –∏–≥—Ä—ã![/b][/color]
[color=#AAAAAA]–í–∞—à–∏ –æ—Ç–∑—ã–≤—ã –ø–æ–º–æ–≥–∞—é—Ç —Å–¥–µ–ª–∞—Ç—å –∏–≥—Ä—É –ª—É—á—à–µ[/color][/center]"""
	
	content.text = disclaimer_text
	content.add_theme_font_size_override("normal_font_size", 16)
	content.add_theme_font_size_override("bold_font_size", 18)
	
	# –î–æ–±–∞–≤–ª—è–µ–º —Ç–µ–∫—Å—Ç –≤ ScrollContainer, –∞ ScrollContainer –≤ vbox
	scroll_container.add_child(content)
	vbox.add_child(scroll_container)
	
	# –ö–Ω–æ–ø–∫–∞ "–ü—Ä–æ–¥–æ–ª–∂–∏—Ç—å"
	var button = Button.new()
	button.text = "–ü–æ–Ω—è—Ç–Ω–æ, –ø—Ä–æ–¥–æ–ª–∂–∏—Ç—å"
	button.custom_minimum_size = Vector2(0, 50)
	button.add_theme_font_size_override("font_size", 18)
	
	# –°—Ç–∏–ª–∏–∑—É–µ–º –∫–Ω–æ–ø–∫—É
	var button_normal = StyleBoxFlat.new()
	button_normal.bg_color = Color(0.2, 0.5, 0.8, 1.0)
	button_normal.corner_radius_top_left = 8
	button_normal.corner_radius_top_right = 8
	button_normal.corner_radius_bottom_left = 8
	button_normal.corner_radius_bottom_right = 8
	button.add_theme_stylebox_override("normal", button_normal)
	
	var button_hover = StyleBoxFlat.new()
	button_hover.bg_color = Color(0.3, 0.6, 1.0, 1.0)
	button_hover.corner_radius_top_left = 8
	button_hover.corner_radius_top_right = 8
	button_hover.corner_radius_bottom_left = 8
	button_hover.corner_radius_bottom_right = 8
	button.add_theme_stylebox_override("hover", button_hover)
	
	var button_pressed = StyleBoxFlat.new()
	button_pressed.bg_color = Color(0.15, 0.4, 0.7, 1.0)
	button_pressed.corner_radius_top_left = 8
	button_pressed.corner_radius_top_right = 8
	button_pressed.corner_radius_bottom_left = 8
	button_pressed.corner_radius_bottom_right = 8
	button.add_theme_stylebox_override("pressed", button_pressed)
	
	button.pressed.connect(func():
		if SoundManager:
			SoundManager.play_sound("page", -5.0)
		window.queue_free()
	)
	
	vbox.add_child(button)
	
	# –°–æ–±–∏—Ä–∞–µ–º –≤—Å–µ –≤–º–µ—Å—Ç–µ
	panel.add_child(vbox)
	window.add_child(panel)
	add_child(window)
	
	# –¶–µ–Ω—Ç—Ä–∏—Ä—É–µ–º –æ–∫–Ω–æ
	await get_tree().process_frame
	var screen_size = DisplayServer.screen_get_size()
	var window_size = window.size
	window.position = Vector2i(
		(screen_size.x - window_size.x) / 2,
		(screen_size.y - window_size.y) / 2
	)
	
	window.show()
